--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,10 +14,12 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">@color/bg</item>
         <!-- Customize your theme here. -->
+        <item name="android:navigationBarColor">@color/bg</item>
     </style>
 
     <style name="AppTheme.Launch" parent="AppTheme">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowBackground">@drawable/splash_screen</item>
+
     </style>
 </resources>
