--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:padding="32dp">
 
     <EditText
-        android:id="@+id/text_msg"
+        android:id="@+id/msg"
         style="@style/TextInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,6 +21,7 @@
         style="@style/Button"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="0dp"
-        android:text="@string/send" />
+        android:text="@string/send"
+        android:onClick="send"/>
 
 </RelativeLayout>
